infra/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeforge-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-forge.local
      secretName: kubeforge-tls-secret
  rules:
    - host: k8s-forge.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
